--- a/store/goods/templates/goods/firearm_detail.html
+++ b/store/goods/templates/goods/firearm_detail.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html'%}
+{% block content %} 
     <h1>Валына</h1>
     <p>{{ text }}</p>
-</body>
-</html>
+{% endblock %}
