поключил postges, прописал: две модели: Goods, Category(зарегестрировал в админке), кастомный менеджер записей AvailableManager, виджет Status и отредактировал вьюшки и шаблоны под изменения

--- a/store/goods/templates/goods/firearm_detail.html
+++ b/store/goods/templates/goods/firearm_detail.html
@@ -1,5 +1,10 @@
 {% extends 'base.html'%}
-{% block content %} 
-    <h1>Валына</h1>
-    <p>{{ text }}</p>
+{% block content %}
+    <h1>{{ good.name }}</h1>
+    <img src="{{ good.image.url }}" alt="{{ good.name }}"" class="weapon-image">
+    <p>{{ good.desctiption }}</p>
+    <p>Цена: {{ good.price }} USD.</p>
+    <p>In stock: {{ good.stock }}</p>
 {% endblock %}
+
+
