создал кастомный inclusion tag 'show_categories'(в отдельном пакетеtemplatetag), добавил 12 позиций в БД, для работы с отображением в шаблонах, прописал логику во views и шаблонах

--- a/store/goods/templates/goods/category.html
+++ b/store/goods/templates/goods/category.html
@@ -1,5 +1,7 @@
-{% extends 'base.html'%}
-{% block content %} 
-    <h1>Валыны</h1>
-    <p>{{ text }}</p>
-{% endblock %}
+{% for cat in cats %}
+    {% if cat.id == cat_selected %}
+        <li class="selected">{{ cat.name }}</li>
+    {% else %}
+        <li><a href="{{ cat.get_absolute_url }}">{{ cat.name }}</a></li>
+    {% endif %}
+{% endfor %}
