--- a/store/goods/templates/goods/firearm_detail.html
+++ b/store/goods/templates/goods/firearm_detail.html
@@ -1,9 +1,9 @@
 {% extends 'base.html'%}
 {% block content %}
     <h1>{{ good.name }}</h1>
-    <img src="{{ good.image.url }}" alt="{{ good.name }}"" class="weapon-image">
-    <p>{{ good.desctiption }}</p>
-    <p>Цена: {{ good.price }} USD.</p>
+    <img src="{{ good.image.url }}" alt="{{ good.name }}" class="weapon-image">
+    <p>{{ good.description }}</p>
+    <p>Price: {{ good.price }} USD.</p>
     <p>In stock: {{ good.stock }}</p>
 {% endblock %}
 
