--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -1,6 +1,7 @@
 <!-- {% load static %} после static "путь к файлу" -->
 <!-- <link type="text/css" rel="stylesheet" href="{% static "goods/CSS/styles.css" %}">  
- его прописывать в заголовке --> 
+его прописывать в заголовке --> 
+{% load category_tag %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,15 @@
     <title>{{ title }}</title>
 </head>
 <body>
-    <h1>Курва!</h1>
+    <ul>
+        {% if cat_selected == 0 or cat_selected is None %}
+            <li class="selected">All categories</li>
+        {% else %}
+            <li><a href="{% url 'main_page' %}">All categories</a></li>
+        {% endif %}
+        <div>{% show_categories cat_selected %}</div>
+    </ul>
+
     {% block content %} {% endblock %}
 </body>
 </html>
